# acp-orchestrator2.0

./: .gitignore  acp-agent 1.0问题.txt  agents.yaml  pyproject.toml
.claude/: settings.local.json
.superpowers/brainstorm/3529-1783925705/content/: acp-adapter.html  approaches.html  components.html  fsm-detail.html  implementation.html  loop-design.html  overview.html  waiting.html
.superpowers/brainstorm/3529-1783925705/state/: server-info
docs/superpowers/plans/: 2026-07-13-acp-orchestrator-plan.md
docs/superpowers/specs/: 2026-07-13-acp-orchestrator-design.md
src/: main.py
src/acp_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agents/: adapter.py  manager.py  session.py
src/agents/adapters/: auggie.py  claude_code.py  cline.py  codex.py  copilot.py  direct_llm.py  droid.py  gemini.py  goose.py  hermes.py  kiro.py  mock.py  opencode.py  openhands.py  pi.py  qoder.py  qwen_code.py  real.py  reasonix.py  vibe.py
src/cli/: display.py  repl.py
src/config/: loader.py  registry.py
src/fsm/: context.py  engine.py  states.py
src/logger/: logger.py
src/openhands/: plugin.py
src/tasks/: models.py  queue.py
tests/: test_adapter.py  test_adapters.py  test_config.py  test_context.py  test_fsm.py  test_integration.py  test_logger.py  test_manager.py  test_models.py  test_openhands.py  test_repl.py  test_task_queue.py
