[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestration framework based on ACP protocol"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "agent-client-protocol>=0.11.0",
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
acp-orch = "src.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
